src/kubernetes/manifests/auditlogservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auditlogservice
spec:
  minReadySeconds: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: auditlogservice
  template:
    metadata:
      labels: 
        app: auditlogservice
        version: v1.0
    spec:
      containers:
        - name: auditlogservice
          image: panky7700/auditlogservice:1.0
          restartPolicy: Always
          # resources:
          #   limits:
          #     cpu: 1000m
          #     memory: 350Mi
