src/kubernetes/manifests/invoiceservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoiceservice
spec:
  minReadySeconds: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: invoiceservice
  template:
    metadata:
      labels: 
        app: invoiceservice
        version: v1.0
    spec:
      containers:
        - name: invoiceservice
          image: panky7700/invoiceservice:1.0
          restartPolicy: Always          
          # resources:
          #   limits:
          #     cpu: 1000m
          #     memory: 350Mi
