src/kubernetes/manifests/notificationservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
spec:
  minReadySeconds: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels: 
        app: notificationservice
        version: v1.0
    spec:
      containers:
        - name: notificationservice
          image: panky7700/notificationservice:1.0
      restartPolicy: Always          
          # resources:
          #   limits:
          #     cpu: 1000m
          #     memory: 350Mi
