src/kubernetes/manifests/customermanagementapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customermanagementapi
spec:
  minReadySeconds: 5
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: customermanagementapi
  template:
    metadata:
      labels: 
        app: customermanagementapi
        version: v1.0
    spec:
      containers:
        - name: customermanagementapi
          image: pitstop/customermanagementapi:1.0
          resources:
            limits:
              cpu: 1000m
              memory: 350Mi
          ports:
            - containerPort: 5100
              protocol: "TCP"
          volumeMounts:
            - name: customermanagementapi-vol
              mountPath: /var/lib
      volumes: 
        - name: customermanagementapi-vol
          persistentVolumeClaim:
            claimName: customermanagemetapi-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: customermanagementapi
spec: 
  #type: NodePort
  selector:
    app: customermanagementapi
  ports:
    - port: 5100
      targetPort: 5100
      protocol: TCP
      #nodePort: 30005
