src/kubernetes/manifests/mailserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailserver
spec:
  minReadySeconds: 5
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: mailserver
  template:
    metadata:
      labels: 
        app: mailserver
        version: v1.0
    spec:
      containers:
        - name: mailserver
          image: maildev/maildev:1.1.0
          resources:
            limits:
              cpu: 1000m
              memory: 350Mi
          ports:
            - containerPort: 25
              protocol: "TCP"
            - containerPort: 80
              protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: mailserver
spec: 
  selector:
    app: mailserver
  ports:
    - port: 25
      targetPort: 25
      protocol: TCP
    - port: 4000
      targetPort: 80
      protocol: TCP
