src/kubernetes/manifests/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  minReadySeconds: 5
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels: 
        app: rabbitmq
        version: v1.0
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          resources:
            limits:
              cpu: 1000m
              memory: 350Mi
          ports:
            - containerPort: 5672
              protocol: "TCP"
            - containerPort: 15672
              protocol: "TCP"
          volumeMounts:
            - name: rabbitmq-vol
              mountPath: /var/lib/rabbitmq
      volumes: 
        - name: rabbitmq-vol
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec: 
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
    - port: 15672
      targetPort: 15672
      protocol: TCP
