src/kubernetes/manifests/sqlserver.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pit-sqlserver-app
  name: pit-sqlserver-deploy
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: pit-sqlserver-pod
  template:
    metadata:
      labels:
        app: pit-sqlserver-pod
    spec:
      securityContext:
        runAsUser: 10001
        fsGroup: 10001    
      containers:
      - name: pit-sqlserver-con
        image: mcr.microsoft.com/azure-sql-edge:latest
        volumeMounts:
          - name: pit-sqlserver-data
            mountPath: /var/opt/mssql
        ports:
        - containerPort: 1433
      volumes:
        - name: pit-sqlserver-data
          persistentVolumeClaim:
            claimName: pit-sqlserver-pvc-2

---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  selector:
    app: pit-sqlserver-pod
  type: NodePort
  ports:
  - name: admin-sql-view
    protocol: TCP
    port: 1433
    targetPort: 1433
    nodePort: 30002
