src/kubernetes/manifests/webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  minReadySeconds: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels: 
        app: webapp
        version: v1.0
    spec:
      containers:
        - name: webapp
          image: panky7700/webapp:1.0
          ports:
            - containerPort: 7005
              protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec: 
  type: LoadBalancer
  selector:
    app: webapp
  ports:
    - port: 7005
      targetPort: 7005
      protocol: TCP
      #nodePort: 30005
