src/kubernetes/manifests/workshopmanagement.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshopmanagementapi
spec:
  minReadySeconds: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: workshopmanagementapi
  template:
    metadata:
      labels: 
        app: workshopmanagementapi
        version: v1.0
    spec:
      containers:
        - name: workshopmanagementapi
          image: panky7700/workshopmanagementapi:1.0
          ports:
            - containerPort: 5200
              protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: workshopmanagementapi
spec: 
  selector:
    app: workshopmanagementapi
  ports:
    - port: 5200
      targetPort: 5200
      protocol: TCP
