src/kubernetes/manifests/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /customer
            pathType: Prefix
            backend:
              service:
                name: customermanagement-svc
                port:
                  number: 5100
          - path: /vehicle
            pathType: Prefix
            backend:
              service:
                name: vehiclemanagement-svc
                port:
                  number: 5000
          - path: /workshop
            pathType: Prefix
            backend:
              service:
                name: workshopmanagement-svc
                port:
                  number: 5200
